--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "my-app-safety",
+  "name": "package-scanner",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
+  "homepage": "https://wanderingluca.github.io/package-scanner/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
