--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
@@ -35,6 +36,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8.5.6",
